--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -1,12 +1,96 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.chocoroll.ourcompay.Login.JoinActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+<ImageView
+    android:layout_width="389dp"
+    android:layout_height="80dp"
+    android:id="@+id/title"
+    android:layout_gravity="center_horizontal"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentStart="true"
+    android:layout_marginBottom="30dp"/>
+<LinearLayout
+android:orientation="horizontal"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
 
-</RelativeLayout>
+<TextView
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:layout_weight="1"
+    android:text="E-mail"
+    />
+
+
+<EditText
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/editid"
+    android:layout_weight="2"
+    android:hint="E-mail"/>
+</LinearLayout>
+<LinearLayout
+android:orientation="horizontal"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+
+<TextView
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:text="비밀번호"
+    android:layout_weight="1"
+    />
+
+<EditText
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/editpwd"
+    android:layout_weight="2"
+    android:hint="Password"
+    android:password="true"/>
+
+</LinearLayout>
+<LinearLayout
+android:orientation="horizontal"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+
+<TextView
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:text="비밀번호확인"
+    android:layout_weight="1"
+    />
+
+<EditText
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/editrepwd"
+    android:layout_weight="2"
+    android:hint="Password"
+    android:password="true"/>
+
+</LinearLayout>
+
+
+
+<Button
+android:layout_width="150dp"
+android:layout_height="50dp"
+android:text="회원가입"
+android:id="@+id/btnregister"
+android:layout_gravity="center_horizontal"
+android:layout_marginTop="50dp"/>
+
+
+
+    </LinearLayout>
