--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,7 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-    <style name="Mytheme" parent="android:Theme.Holo.Light">
-
+    <style name="Mytheme" parent="android:Theme.Light">
         <item name="android:windowNoTitle">true</item>
     </style>
 </resources>
