--- a/app/src/main/res/layout/fragment_my_apply.xml
+++ b/app/src/main/res/layout/fragment_my_apply.xml
@@ -3,7 +3,27 @@
     android:layout_height="match_parent"
     tools:context="com.chocoroll.ourcompay.UserMenu.MyApplyFragment"
     android:orientation="vertical"
+    xmlns:app1="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff">
+
+
+
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        app1:pstsIndicatorColor="@color/tab_indicate"
+        app1:pstsIndicatorHeight="4dip"
+        app1:pstsShouldExpand="true"
+        app1:pstsDividerColor="#00ff0000"
+        android:background="@color/tab_background"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tabs"
+        tools:context=".UserMenu.MyApplyFragment" />
 
 
 
