--- a/app/src/main/res/layout/fragment_mylist.xml
+++ b/app/src/main/res/layout/fragment_mylist.xml
@@ -4,6 +4,7 @@
     tools:context="com.chocoroll.ourcompay.Mine.MyListFragment"
     android:background="#ffffff"
     android:orientation="vertical"
+    android:padding="10dp"
     >
 
 
@@ -21,20 +22,6 @@
 
     </ListView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:layout_marginLeft="310dp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:text = ":::"
-            />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -46,7 +33,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:paddingTop="5dp"
         android:text = "내 질문 목록"
         android:textSize="20dp"/>
@@ -57,24 +44,6 @@
         android:layout_height="wrap_content">
 
     </ListView>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:layout_marginLeft="310dp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:text = ":::"
-            />
-
-    </LinearLayout>
 
 
 </LinearLayout>
