--- a/app/src/main/res/menu/menu_join_select.xml
+++ b/app/src/main/res/menu/menu_join_select.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.chocoroll.ourcompay.Login.JoinSelectActivity">
+    tools:context="com.chocoroll.ourcompay.Login.JoinSelectFragment">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
