--- a/app/src/main/res/layout/fragment_report_detail.xml
+++ b/app/src/main/res/layout/fragment_report_detail.xml
@@ -7,8 +7,9 @@
     android:orientation="vertical" >
 
     <ScrollView
+        android:layout_weight="8"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:fillViewport="true" >
 
 
@@ -265,5 +266,23 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:id="@+id/report_reply"
+        android:background="@color/main_color"
+        android:gravity="center">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="댓글보기(0)"
+            android:id="@+id/textView"
+            android:textSize="15dp"/>
+    </LinearLayout>
 
 </LinearLayout>
