--- a/app/src/main/res/layout/fragment_company_state.xml
+++ b/app/src/main/res/layout/fragment_company_state.xml
@@ -1,10 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chocoroll.ourcompay.AdminMenu.CompanyStateFragment">
+    tools:context="com.chocoroll.ourcompay.AdminMenu.CompanyStateFragment"
+    android:background="#ffffff">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"/>
 </FrameLayout>
