--- a/app/src/main/res/layout/fragment_visit_state.xml
+++ b/app/src/main/res/layout/fragment_visit_state.xml
@@ -83,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
-            android:id="@+id/textView2"
+            android:id="@+id/curDate"
             android:layout_gravity="center_horizontal" />
 
         <com.astuetz.PagerSlidingTabStrip
@@ -94,7 +94,8 @@
         app1:pstsIndicatorHeight="4dip"
         app1:pstsShouldExpand="true"
         app1:pstsDividerColor="#00ff0000"
-        android:background="@color/tab_background"/>
+        android:background="@color/tab_background"
+            android:fillViewport="false" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
