--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent">
-            <TextView
+            <com.chocoroll.ourcompay.Model.EBTextView
                 android:id="@+id/title_bar_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
